Fix: site-alert (currently hidden) z-index increase and @media query description. Push for peer code review

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,7 @@ body {
   width: 100%;
   margin-top: 65px;
   text-align: center;
+  z-index: 2;
 }
 
 /* Welcome */
@@ -363,7 +364,7 @@ table caption {
 
 /* Media */
 
-
+/* This adjustment reduces the size and spacing of the welcome heading to accommodate smaller mobile devices */
 @media screen and (max-width: 409px) {
 .heading-welcome {
     font-size: 197%;
